--- a/TestHibernateApp/pom.xml
+++ b/TestHibernateApp/pom.xml
@@ -68,7 +68,30 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>hibernate3-maven-plugin</artifactId>
 				<version>2.2</version>
-
+				<configuration>
+					<components>
+						<component>
+							<name>hbm2ddl</name>
+							<implementation>annotationconfiguration</implementation>
+						</component>
+						<component>
+							<name>hbm2hbmxml</name>
+							<outputDirectory>/src/main/resources</outputDirectory>
+						</component>
+						<component>
+							<name>hbm2java</name>
+							<outputDirectory>src/main/java</outputDirectory>
+						</component>
+					</components>
+					<componentProperties>
+						<drop>true</drop>
+						<ejb3>true</ejb3>
+						<jdk5>true</jdk5>
+						<outputfilename>schema.sql</outputfilename>
+						<configurationfile>/src/main/resources/hibernate.cfg.xml
+						</configurationfile>
+					</componentProperties>
+				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>mysql</groupId>
